fixed height auto issue on tile on mobile

--- a/src/styles/tiles.scss
+++ b/src/styles/tiles.scss
@@ -67,7 +67,7 @@
 
   }
   @media only screen and (max-width: 767px) {
-    height:auto;
+    min-height:550px;
     width:100%;
   }
   @media only screen and (min-width: 768px) and (max-width: 1023px) {
